src/components/SearchItems.js: fixed z-index on react-scroll and nav

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,7 +11,7 @@
     width: 100%;
     padding: 2rem 4.5rem;
     background: $color-white;
-    z-index: 2;
+    z-index: 3;
   }
   &--scrolled{
     & > div.header__container {
